static/css/style.css
/* ... */
.threadbox-comment-body-cell {
  position: relative;
  width: 100%;
}

.threadbox-comment-body {
  padding: 10px 10px 30px;

  & pre,
  & code {
    background-color: var(--color-tertiary);
  }

  & h1 { font-size: 1.5rem; }
  & h2 { font-size: 1.3rem; }
  & h3 { font-size: 1.2rem; }
  & h4 { font-size: 1.1rem; }

    /* Container table styling */
  & table {
      border-collapse: collapse;
      margin: 10px 0;
      border: 1px solid var(--color-text-main);
  }
  
  /* Header styling */
  & th {
      background-color: var(--color-tertiary);
      border: 1px solid var(--color-accent-red);
      padding: 8px 12px;
      text-align: left;
      font-weight: bold;
  }
  
  /* Cell styling */
  & td {
      border: 1px solid var(--color-accent-red);
      padding: 8px 12px;
      vertical-align: top;
  }
  
}

.thread-reply-button {
  background: var(--color-tertiary);
  border-radius: 5% / 100%;
  bottom: 8px;
  font-family: var(--font-serif);
  left: 150px;
  position: absolute;
}

.threadbox-comment-ts {
  bottom: 0;
  font-size: 10px;
  left: 5px;
  position: absolute;
}

.comment-box {
  display: grid;
  grid-template-columns: 1fr;
  margin-bottom: 20px;
  width: 100%;
}

.quote-block {
  background-color: var(--color-tertiary-pale);
  border: solid 1px var(--color-primary-dark);
  border-radius: 3px;
  font-family: var(--font-serif);
  font-size: 12pt;
  margin: 10px;
  overflow: scroll;
}

.quote-heading {
  color: var(--color-primary-dark);
  font-size: 9pt;
  font-style: italic;
  margin-left: 5px;
}

.quote-body {
  margin-left: 5px;
  max-height: 200px;
  overflow: scroll;
}

